[SCRUM-82] chore: 테스트 주석 및 변수명 정리